# cycloplanning-ics

./: .gitignore  Dockerfile  Makefile  README.md  cmd.sh  pyproject.toml
src/cycloplanning/: __init__.py  cli.py
tests/unit/: test_cycloplanning.py
