[project]
name = "cycloplanning"
version = "0.1.2"
description = "A project to parse the cycloplanning as ICS"
authors = [
    { name = "gma2th", email = "gma2th@proton.me" }
]
dependencies = [
    "ics>=0.7.2",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "awscli>=1.34.24",
    "pytz>=2024.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"cycloplanning" = "cycloplanning.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pre-commit>=3.5.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "flask>=3.0.3",
]

[tool.coverage.run]
source = ["cycloplanning"]
